Dodano styl CSS do body

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
         <style>
             body {
                 margin: 0;
+                background-color: #ff0000;
+                font-family: 'Comic Sans MS';
             }
 
             .arbuz{
