Zmieniono pare rzeczy

--- a/index.html
+++ b/index.html
@@ -4,8 +4,6 @@
         <style>
             body {
                 margin: 0;
-                background-color: #ff0000;
-                font-family: 'Comic Sans MS';
             }
 
             .arbuz{
@@ -14,14 +12,14 @@
                 height: 200px;
                 margin: 20px;
                 padding: 10px;
-                box-sizing: border-box;
-                border: 5px dashed #ff0000;
-                overflow: scroll;
-                transition: all 1s;
             }
 
             .arbuz:hover {
                 background-color: lime;
+            }
+
+            html {
+                font-size: 14pt;
             }
         </style>
     </head>
